update string data type

--- a/PHP/3.Data Types.md
+++ b/PHP/3.Data Types.md
@@ -18,6 +18,62 @@ echo 'This will not expand: \n a newline';
 
 Double quotes are the Swiss Army Knife of strings. They will not only parse variables as mentioned above, but all sorts of special characters, like \n for newline, \t for a tab, etc.
 
+```
+<?php
+$juice = "apple";
+
+// Outputs: He drank some juice made of apples.
+echo "He drank some juice made of ${juice}s.";
+?>
+```
+
+### Nowdoc
+Nowdoc syntax was introduced in 5.3 and internally behaves the same way as single quotes except it is suited toward the use of multi-line strings without the need for concatenating.
+```
+<?php
+$str = <<<'EOD'             // initialized by <<<
+Example of string
+spanning multiple lines
+using nowdoc syntax.
+$a does not parse.
+EOD;                        // closing 'EOD' must be on it's own line, and to the left most point
+
+/**
+ * Output:
+ *
+ * Example of string
+ * spanning multiple lines
+ * using nowdoc syntax.
+ * $a does not parse.
+ */
+ ?>
+```
+
+### Heredoc
+Heredoc syntax internally behaves the same way as double quotes except it is suited toward the use of multi-line strings without the need for concatenating.
+```
+<?php
+$a = 'Variables';
+
+$str = <<<EOD               // initialized by <<<
+Example of string
+spanning multiple lines
+using heredoc syntax.
+$a are parsed.
+EOD;                        // closing 'EOD' must be on it's own line, and to the left most point
+
+/**
+ * Output:
+ *
+ * Example of string
+ * spanning multiple lines
+ * using heredoc syntax.
+ * Variables are parsed.
+ */
+ ?>
+```
+
+
 ## Integer
 An integer data type is a non-decimal number between -2,147,483,648 and 2,147,483,647.
 
