add variables and arrays documentation

--- a/PHP/2.Syntax&Semantics.md
+++ b/PHP/2.Syntax&Semantics.md
@@ -51,4 +51,44 @@ PHP supports the following data types:
 - NULL
 - Resource
 
+## Constants
+Constants are like variables except that once they are defined they cannot be changed or undefined.
 
+A valid constant name starts with a letter or underscore (no $ sign before the constant name).
+
+**Note:** Unlike variables, constants are automatically global across the entire script.
+
+Create a constant and print its value:
+```
+<?php
+const MY_CONSTANT = 5;
+echo MY_CONSTANT;
+?> 
+```
+### Defining a constant
+Create a constant with a **case-sensitive** name:
+```
+ <?php
+define("GREETING", "Welcome to W3Schools.com!");
+echo GREETING;
+?> 
+```
+Create a constant with a **case-insensitive** name:
+```
+ <?php
+define("GREETING", "Welcome to W3Schools.com!", true);
+echo greeting;
+?> 
+```
+
+In PHP7, you can create an Array constant using the define() function.
+```
+ <?php
+define("cars", [
+  "Alfa Romeo",
+  "BMW",
+  "Toyota"
+]);
+echo cars[0];
+?> 
+```
