--- a/PHP/5.Arrays.md
+++ b/PHP/5.Arrays.md
@@ -116,7 +116,7 @@ for ($row = 0; $row < 4; $row++) {
 
 # Sort Functions For Arrays
 
-- sort() - sort arrays in ascending order
+**sort()** - sort arrays in ascending order
 ```
 $cars = array("Volvo", "BMW", "Toyota");
 sort($cars);
@@ -126,7 +126,7 @@ sort($cars);
  *   Volvo 
  */
 ```
-- rsort() - sort arrays in descending order
+**rsort()** - sort arrays in descending order
 ```
 $numbers = array(6, 22, 11);
 rsort($numbers);
@@ -136,7 +136,7 @@ rsort($numbers);
  *   6 
  */
 ```
-- asort() - sort associative arrays in ascending order, according to the value
+**asort()** - sort associative arrays in ascending order, according to the value
 ```
 $age = array("Peter"=>"35", "Ben"=>"37", "Joe"=>"43");
 asort($age);
@@ -146,7 +146,7 @@ asort($age);
  *   Key=Joe, Value=43 
  */
 ```
-- ksort() - sort associative arrays in ascending order, according to the key
+**ksort()** - sort associative arrays in ascending order, according to the key
 ```
 $age = array("Peter"=>"35", "Ben"=>"37", "Joe"=>"43");
 ksort($age);
@@ -156,7 +156,7 @@ ksort($age);
  *   Key=Peter, Value=35 
  */
 ```
-- arsort() - sort associative arrays in descending order, according to the value
+**arsort()** - sort associative arrays in descending order, according to the value
 ```
 $age = array("Peter"=>"35", "Ben"=>"37", "Joe"=>"43");
 asort($age);
@@ -166,7 +166,7 @@ asort($age);
  *   Key=Peter, Value=35 
  */
 ```
-- krsort() - sort associative arrays in descending order, according to the key
+**krsort()** - sort associative arrays in descending order, according to the key
 ```
 $age = array("Peter"=>"35", "Ben"=>"37", "Joe"=>"43");
 ksort($age);
