update variables documentation

--- a/PHP/4.Variables.md
+++ b/PHP/4.Variables.md
@@ -31,3 +31,143 @@ $txt = "W3Schools.com";
 echo "I love " . $txt . "!";
 ```
 
+# Variable Scope
+In PHP, variables can be declared anywhere in the script.
+
+The scope of a variable is the part of the script where the variable can be referenced/used.
+
+PHP has three different variable scopes:
+- Global
+- Local
+- Static
+
+## Global
+A variable declared **outside** a function has a **Global Scope** and can only be accessed outside a function:
+```
+<?php
+$x = 5; // Global scope
+
+function myTest() {
+    // using x inside this function will generate an error
+    echo "<p>The value of x is: $x</p>";
+}
+myTest();
+echo "<p>The value of x is: $x</p>";
+?>
+```
+
+## Local
+A variable declared **within** a function has a **Local Scope** and can only be accessed within that function:
+```
+<?php
+function myTest() {
+    $x = 5; // Local scope
+    echo "<p>The value of x is: $x</p>";
+}
+myTest();
+
+// using x outside the function will generate an error
+echo "<p>The value of x is: $x</p>";
+?>
+```
+
+## The Global Keyword
+The `global` keyword is used to access a global variable from within a function.
+
+to do this, use the `global` keyword inside the function:
+
+```
+<?php
+$x = 5;
+$y = 10;
+function myTest() {
+    global $x, $y;
+    $y = $x + $y;
+}
+myTest();
+echo $y; // output 15
+?>
+```
+
+## The Static Keyword
+Normally, when a function is completed/executed, all of its variables are deleted. However, sometimes we want a local variable NOT to be deleted. We need it for a further job.
+
+To do this, use the `static` keyword when you first declare the variable:
+
+```
+<?php
+function myTest() {
+    static $x = 0;
+    echo "$x <br>";
+    $x++;
+}
+myTest(); // output: 0
+myTest(); // output: 1
+myTest(); // output: 2
+?>
+```
+
+## Global Variables - Superglobals
+Some predefined variables in PHP are **superglobals**, which means that they are always accessible, regardless of scope - and you can access them from any function, class or file without having to do anything special.
+
+The PHP superglobal variables are:
+
+### $GLOBALS
+An associative array containing references to all variables which are currently defined in the global scope of the script. The variable names are the keys of the array. 
+```
+<?php
+$x = 75;
+$y = 25;
+function addition() {
+  $GLOBALS['z'] = $GLOBALS['x'] + $GLOBALS['y'];
+}
+addition();
+echo $z;
+?> 
+```
+
+### $_SERVER
+is a PHP super global variable which holds information about headers, paths, and script locations. 
+```
+<?php
+echo $_SERVER['PHP_SELF'];
+echo "<br>";
+echo $_SERVER['SERVER_NAME'];
+echo "<br>";
+echo $_SERVER['HTTP_HOST'];
+?>
+```
+### $_REQUEST
+is a PHP super global variable which is used to collect data after submitting an HTML form.
+### $_POST
+An associative array of variables passed to the current script via the HTTP POST method when using application/x-www-form-urlencoded or multipart/form-data as the HTTP Content-Type in the request. 
+```
+<?php
+echo 'Hello ' . htmlspecialchars($_POST["name"]) . '!';
+?>
+```
+### $_GET
+An associative array of variables passed to the current script via the URL parameters (aka. query string). Note that the array is not only populated for GET requests, but rather for all requests with a query string. 
+```
+<?php
+echo 'Hello ' . htmlspecialchars($_GET["name"]) . '!';
+?>
+```
+### $_FILES
+An associative array of items uploaded to the current script via the HTTP POST method. The structure of this array is outlined in the POST method uploads section. 
+### $_ENV
+An associative array of variables passed to the current script via the environment method. 
+```
+<?php
+echo 'My username is ' .$_ENV["USER"] . '!';
+?>
+```
+### $_COOKIE
+An associative array of variables passed to the current script via HTTP Cookies. 
+```
+<?php
+echo 'Hello ' . htmlspecialchars($_COOKIE["name"]) . '!';
+?>
+```
+### $_SESSION
+An associative array containing session variables available to the current script. See the Session functions documentation for more information on how this is used. 
